--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "netatmo-energy-adapter",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Netatmo Energy Adapter for WebThings Gateway",
   "author": "Michael Kohler <me@michaelkohler.info>",
   "main": "index.js",
@@ -18,6 +18,7 @@
   },
   "files": [
     "index.js",
+    "config.js",
     "manifest.json",
     "package.json",
     "netatmo-energy-adapter.js",
