--- a/package.json
+++ b/package.json
@@ -3,25 +3,26 @@
   "version": "1.0.0",
   "description": "Netatmo Energy Adapter for WebThings Gateway",
   "author": "Michael Kohler <me@michaelkohler.info>",
-  "main": "index.js",
-  "scripts": {
-    "build": "shasum --algorithm 256 manifest.json package.json *.js LICENSE README.md > SHA256SUMS && find node_modules \\( -type f -o -type l \\) -exec shasum --algorithm 256 {} \\; >> SHA256SUMS"
-  },
   "homepage": "https://github.com/MichaelKohler/netatmo-energy-adapter",
   "license": "MPL-2.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/MichaelKohler/netatmo-energy-adapter.git"
   },
+  "main": "./src/index.js",
+  "engines": {
+    "node": ">= 10"
+  },
   "dependencies": {
-    "netatmo": "^2.4.0"
+    "node-fetch": "^2.6.7"
+  },
+  "scripts": {
+    "build": "shasum --algorithm 256 manifest.json package.json *.js LICENSE README.md > SHA256SUMS && find node_modules \\( -type f -o -type l \\) -exec shasum --algorithm 256 {} \\; >> SHA256SUMS"
   },
   "files": [
-    "index.js",
-    "config.js",
     "manifest.json",
     "package.json",
-    "netatmo-energy-adapter.js",
+    "src",
     "SHA256SUMS"
   ]
 }
