--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "netatmo-energy-adapter",
-  "version": "2.0.1",
+  "version": "3.0.0",
   "description": "Netatmo Energy Adapter for WebThings Gateway",
   "author": "Michael Kohler <me@michaelkohler.info>",
   "homepage": "https://github.com/MichaelKohler/netatmo-energy-adapter",
@@ -17,7 +17,7 @@
     "node-fetch": "^2.6.7"
   },
   "scripts": {
-    "build": "shasum --algorithm 256 manifest.json package.json *.js LICENSE README.md > SHA256SUMS && find node_modules \\( -type f -o -type l \\) -exec shasum --algorithm 256 {} \\; >> SHA256SUMS"
+    "build": "shasum --algorithm 256 manifest.json package.json src/*.js src/views/* LICENSE README.md > SHA256SUMS && find node_modules \\( -type f -o -type l \\) -exec shasum --algorithm 256 {} \\; >> SHA256SUMS"
   },
   "files": [
     "manifest.json",
